# spellcast-solver

./: Cargo.toml  LICENSE_WORDLIST  wordlist.txt
.github/workflows/: ci.yml  clippy.yml
examples/: print_trie.rs
src/: board.rs  lib.rs  main.rs  trie.rs  wordlist.rs
